unpackaged/main/default/objects/Opportunity/fields/TI_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>TI_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox was created to prevent dupe TI cases being created.</description>
    <label>TI Case Created</label>
    <type>Checkbox</type>
</CustomField>