unpackaged/main/default/objects/Opportunity/fields/TI_PIF__c.field-meta.xml
<CustomField>
    <fullName>TI_PIF__c</fullName>
    <formula>NOT(ISNULL( TI_PIF_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI PIF?</label>
    <type>Checkbox</type>
</CustomField>