unpackaged/main/default/objects/Opportunity/fields/Total_Pay_DP__c.field-meta.xml
<CustomField>
    <fullName>Total_Pay_DP__c</fullName>
    <description>To calculate total Paid by Client as downpayment</description>
    <formula>Down_Payment_1__c +  Down_Payment_2__c + Down_Payment_3__c + Down_Payment_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This Generates Automaticly by the sum of all down payments</inlineHelpText>
    <label>Total Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>