unpackaged/main/default/objects/Opportunity/fields/Total_Representation_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Representation_Time__c</fullName>
    <formula>Representation_End_Date__c - Representation_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the amount of time in days ITR will represent the client.</inlineHelpText>
    <label>Total Representation Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>