unpackaged/main/default/objects/Opportunity/fields/Total_to_be_pay__c.field-meta.xml
<CustomField>
    <fullName>Total_to_be_pay__c</fullName>
    <label>Remaining Total to be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>