unpackaged/main/default/objects/Opportunity/fields/Valid_until_revoke_from_the_client__c.field-meta.xml
<CustomField>
    <fullName>Valid_until_revoke_from_the_client__c</fullName>
    <label>Valid until revoke from the client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>