unpackaged/main/default/objects/Opportunity/fields/Velocify_First_Trader__c.field-meta.xml
<CustomField>
    <fullName>Velocify_First_Trader__c</fullName>
    <label>Velocify First Trader</label>
    <length>50</length>
    <type>Text</type>
</CustomField>