unpackaged/main/default/objects/Opportunity/fields/Velocify_ID_Account__c.field-meta.xml
<CustomField>
    <fullName>Velocify_ID_Account__c</fullName>
    <formula>Account.PersonContact.Velocify_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Velocify ID (Account)</label>
    <type>Text</type>
</CustomField>