unpackaged/main/default/objects/Opportunity/fields/X1T_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>X1T_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related First Trade Opportunity</description>
    <label>1T Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>First_Trade</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>First Trade Opportunities</relationshipLabel>
    <relationshipName>First_Trade_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>