unpackaged/main/default/objects/Opportunity/fields/X2nd_Trade_Commission__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Trade_Commission__c</fullName>
    <label>2nd Trade Commission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ozzie</fullName>
            </value>
            <value>
                <fullName>charles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>