unpackaged/main/default/objects/Opportunity/fields/X2T_Opportunity_Created_Automatically__c.field-meta.xml
<CustomField>
    <fullName>X2T_Opportunity_Created_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields prevents the duplication of 2T Opportunity</description>
    <label>2T Opportunity Created Automatically?</label>
    <type>Checkbox</type>
</CustomField>