unpackaged/main/default/objects/Opportunity/fields/X2T_Received_Agreement_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>X2T_Received_Agreement_Timestamp__c</fullName>
    <label>2T Received Agreement Timestamp</label>
    <type>Date</type>
</CustomField>