unpackaged/main/default/objects/Opportunity/fields/X3rd_Party_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Billing_Street__c</fullName>
    <label>3rd Party Billing Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>