unpackaged/main/default/objects/Opportunity/fields/X3rd_Party_City__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_City__c</fullName>
    <label>3rd Party City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>