unpackaged/main/default/objects/Opportunity/fields/X3rd_Party_Email__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Email__c</fullName>
    <label>3rd Party Email</label>
    <type>Email</type>
</CustomField>