unpackaged/main/default/objects/Opportunity/fields/X3rd_Party_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Phone_Number__c</fullName>
    <label>3rd Party Phone Number</label>
    <type>Phone</type>
</CustomField>