unpackaged/main/default/objects/Opportunity/fields/X3rd_Party_Relationship__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Relationship__c</fullName>
    <label>3rd Party Relationship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>