unpackaged/main/default/objects/Opportunity/fields/X3rd_Party_Zip__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Zip__c</fullName>
    <label>3rd Party Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>