unpackaged/main/default/objects/Opportunity/fields/X3T_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>X3T_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3T Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Third_Trade</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Third Trade Opportunities</relationshipLabel>
    <relationshipName>ThirdTradeOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>