unpackaged/main/default/objects/Opportunity/fields/Years_to_File_2__c.field-meta.xml
<CustomField>
    <fullName>Years_to_File_2__c</fullName>
    <label>Years to File 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>