unpackaged/main/default/objects/Opportunity/recordTypes/First_Trade.recordType-meta.xml
<RecordType>
    <fullName>First_Trade</fullName>
    <active>true</active>
    <businessProcess>First Trader Sales Process</businessProcess>
    <label>First Trade</label>
</RecordType>