unpackaged/main/default/objects/Opportunity/recordTypes/Second_Trade.recordType-meta.xml
<RecordType>
    <fullName>Second_Trade</fullName>
    <active>true</active>
    <businessProcess>Second Trader Sales Process</businessProcess>
    <label>Second Trade</label>
</RecordType>