unpackaged/main/default/objects/Opportunity/recordTypes/Third_Trade.recordType-meta.xml
<RecordType>
    <fullName>Third_Trade</fullName>
    <active>true</active>
    <businessProcess>Second Trader Sales Process</businessProcess>
    <label>Third Trade</label>
</RecordType>