unpackaged/main/default/objects/Opportunity/validationRules/SecondTradeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SecondTradeValidation</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.Name = &quot;Second Trade&quot;&amp;&amp; HasOpportunityLineItem =FALSE&amp;&amp; ISPICKVAL(StageName, &quot;Intro Pending&quot;)</errorConditionFormula>
    <errorMessage>You must add services in order to close a second trade opportunity.</errorMessage>
</ValidationRule>