unpackaged/main/default/objects/Opportunity/validationRules/Solution_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Solution_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name=&#39;Second Trade&#39;&amp;&amp; 
ISPICKVAL(StageName, &quot;Intro Pending&quot;) &amp;&amp;
NOT(ISPICKVAL(PRIORVALUE(StageName), &quot;Intro Pending&quot;))&amp;&amp;


(
    ISBLANK(TEXT(Solution_Type__c)) ||
    ISBLANK(TEXT(Payment_Treshold__c))
)

||
RecordType.Name=&#39;Third Trade&#39;&amp;&amp; 
ISPICKVAL(StageName, &quot;Intro Pending&quot;) &amp;&amp;
NOT(ISPICKVAL(PRIORVALUE(StageName), &quot;Intro Pending&quot;))&amp;&amp;

ISBLANK(TEXT(Solution_Type__c))</errorConditionFormula>
    <errorMessage>Please Enter the Solution Type and/or Payment Threshold to save the record</errorMessage>
</ValidationRule>