unpackaged/main/default/objects/Opportunity/listViews/All_Opportunities_No_Action_Last_24_Hrs.listView-meta.xml
<ListView>
    <fullName>All_Opportunities_No_Action_Last_24_Hrs</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>OPPORTUNITY.LAST_STAGE_CHANGE</columns>
    <columns>Loss_Reason__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Second_Trade,Opportunity.Third_Trade</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.LAST_ACTIVITY</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>2nd Trade Oppt_No Action last 24 Hrs</label>
    <sharedTo>
        <group>ITR_Second_Trader</group>
    </sharedTo>
</ListView>