unpackaged/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Sub_Stage__c</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>1st Trade,2nd Trade,3rd Trade</value>
    </filters>
    <filters>
        <field>ITR_Payment_Method__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>2nd Trade,3rd Trade</value>
    </filters>
    <label>All Opportunities</label>
    <sharedTo>
        <role>CEO</role>
        <role>ITR_Executive</role>
        <role>ITR_Manager</role>
    </sharedTo>
</ListView>