unpackaged/main/default/objects/Opportunity/listViews/Failed_flag_review.listView-meta.xml
<ListView>
    <fullName>Failed_flag_review</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Failed_Transaction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Failed_Transaction__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Second_Trade</value>
    </filters>
    <label>Failed flag-review</label>
</ListView>