unpackaged/main/default/objects/Opportunity/listViews/Incorrect_Info_Submitted.listView-meta.xml
<ListView>
    <fullName>Incorrect_Info_Submitted</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Sub_Stage__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>1T</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>contains</operation>
        <value>Agreements</value>
    </filters>
    <filters>
        <field>Sub_Stage__c</field>
        <operation>equals</operation>
        <value>Incorrect Info Submitted</value>
    </filters>
    <label>My Incorrect Info Submitted</label>
    <sharedTo>
        <group>All_users_except_dialers</group>
    </sharedTo>
</ListView>