unpackaged/main/default/objects/Opportunity/listViews/Intro_Pending_without_Solution_Type.listView-meta.xml
<ListView>
    <fullName>Intro_Pending_without_Solution_Type</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Sub_Stage__c</columns>
    <columns>Solution_Type__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>2T</value>
    </filters>
    <filters>
        <field>Solution_Type__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Intro Pending</value>
    </filters>
    <label>Intro Pending without Solution Type</label>
</ListView>