unpackaged/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Sub_Stage__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>My Open Opportunities</label>
</ListView>