unpackaged/main/default/objects/Opportunity/listViews/Opportunities_with_Collection_Specialist.listView-meta.xml
<ListView>
    <fullName>Opportunities_with_Collection_Specialist</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Collection_Specialist__c</columns>
    <filterScope>Everything</filterScope>
    <label>Opportunities with Collection Specialist</label>
</ListView>